des--elev_rud_model_TT_z_v_psi_cpp_ws/logs/auv_imp/build.make.014.log
[  0%] Built target geometry_msgs_generate_messages_eus
[  0%] Built target avl_bsd_translator_generate_messages_lisp
[  0%] Built target geometry_msgs_generate_messages_py
[  0%] Built target geometry_msgs_generate_messages_nodejs
[  0%] Built target geometry_msgs_generate_messages_cpp
[  0%] Built target rosgraph_msgs_generate_messages_py
[  0%] Built target roscpp_generate_messages_cpp
[  0%] Built target roscpp_generate_messages_eus
[  0%] Built target avl_bsd_translator_generate_messages_py
[  0%] Built target avl_bsd_translator_generate_messages_cpp
[  0%] Built target std_msgs_generate_messages_lisp
[  0%] Built target roscpp_generate_messages_nodejs
[  0%] Built target roscpp_generate_messages_lisp
[  0%] Built target avl_bsd_translator_generate_messages_nodejs
[  0%] Built target roscpp_generate_messages_py
[  0%] Built target rosgraph_msgs_generate_messages_nodejs
[  0%] Built target std_msgs_generate_messages_eus
[  0%] Built target rosgraph_msgs_generate_messages_eus
[  0%] Built target geometry_msgs_generate_messages_lisp
[  0%] Built target rosgraph_msgs_generate_messages_cpp
[  0%] Built target avl_bsd_translator_generate_messages_eus
[  0%] Built target std_msgs_generate_messages_cpp
[  0%] Built target rosgraph_msgs_generate_messages_lisp
[  0%] Built target std_msgs_generate_messages_py
[  0%] Built target std_msgs_generate_messages_nodejs
[35m[1mScanning dependencies of target auv_imp[0m
[ 50%] [32mBuilding CXX object CMakeFiles/auv_imp.dir/src/auv_imp.cpp.o[0m
/local/vol00/home/vpetrov/dev/smlk_bsd_auv/des--elev_rud_model_TT_z_v_psi_cpp_ws/src/auv_imp/src/auv_imp.cpp: In constructor ‘AUVNode::AUVNode()’:
/local/vol00/home/vpetrov/dev/smlk_bsd_auv/des--elev_rud_model_TT_z_v_psi_cpp_ws/src/auv_imp/src/auv_imp.cpp:10:15: error: no matching function for call to ‘ros::Rate::Rate()’
   10 |     AUVNode() {
      |               ^
In file included from /opt/ros/noetic/include/ros/ros.h:39,
                 from /local/vol00/home/vpetrov/dev/smlk_bsd_auv/des--elev_rud_model_TT_z_v_psi_cpp_ws/src/auv_imp/src/auv_imp.cpp:1:
/opt/ros/noetic/include/ros/rate.h:59:12: note: candidate: ‘ros::Rate::Rate(const ros::Duration&)’
   59 |   explicit Rate(const Duration&);
      |            ^~~~
/opt/ros/noetic/include/ros/rate.h:59:12: note:   candidate expects 1 argument, 0 provided
/opt/ros/noetic/include/ros/rate.h:58:3: note: candidate: ‘ros::Rate::Rate(double)’
   58 |   Rate(double frequency);
      |   ^~~~
/opt/ros/noetic/include/ros/rate.h:58:3: note:   candidate expects 1 argument, 0 provided
/opt/ros/noetic/include/ros/rate.h:51:20: note: candidate: ‘constexpr ros::Rate::Rate(const ros::Rate&)’
   51 | class ROSTIME_DECL Rate
      |                    ^~~~
/opt/ros/noetic/include/ros/rate.h:51:20: note:   candidate expects 1 argument, 0 provided
/opt/ros/noetic/include/ros/rate.h:51:20: note: candidate: ‘constexpr ros::Rate::Rate(ros::Rate&&)’
/opt/ros/noetic/include/ros/rate.h:51:20: note:   candidate expects 1 argument, 0 provided
/local/vol00/home/vpetrov/dev/smlk_bsd_auv/des--elev_rud_model_TT_z_v_psi_cpp_ws/src/auv_imp/src/auv_imp.cpp:11:19: error: ‘argc’ was not declared in this scope
   11 |         ros::init(argc, argv, "auv_imp");
      |                   ^~~~
/local/vol00/home/vpetrov/dev/smlk_bsd_auv/des--elev_rud_model_TT_z_v_psi_cpp_ws/src/auv_imp/src/auv_imp.cpp:11:25: error: ‘argv’ was not declared in this scope
   11 |         ros::init(argc, argv, "auv_imp");
      |                         ^~~~
/local/vol00/home/vpetrov/dev/smlk_bsd_auv/des--elev_rud_model_TT_z_v_psi_cpp_ws/src/auv_imp/src/auv_imp.cpp: In member function ‘void AUVNode::action_callback(const ConstPtr&)’:
/local/vol00/home/vpetrov/dev/smlk_bsd_auv/des--elev_rud_model_TT_z_v_psi_cpp_ws/src/auv_imp/src/auv_imp.cpp:35:61: error: invalid static_cast from type ‘const value_type’ {aka ‘const std::__cxx11::basic_string<char>’} to type ‘double’
   35 |         elevator = static_cast<double>(action_msg->VALUES[1]);
      |                                                             ^
/local/vol00/home/vpetrov/dev/smlk_bsd_auv/des--elev_rud_model_TT_z_v_psi_cpp_ws/src/auv_imp/src/auv_imp.cpp:36:59: error: invalid static_cast from type ‘const value_type’ {aka ‘const std::__cxx11::basic_string<char>’} to type ‘double’
   36 |         rudder = static_cast<double>(action_msg->VALUES[2]);
      |                                                           ^
/local/vol00/home/vpetrov/dev/smlk_bsd_auv/des--elev_rud_model_TT_z_v_psi_cpp_ws/src/auv_imp/src/auv_imp.cpp:37:56: error: invalid static_cast from type ‘const value_type’ {aka ‘const std::__cxx11::basic_string<char>’} to type ‘double’
   37 |         rpm = static_cast<double>(action_msg->VALUES[3]);
      |                                                        ^
make[2]: *** [CMakeFiles/auv_imp.dir/build.make:63: CMakeFiles/auv_imp.dir/src/auv_imp.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:189: CMakeFiles/auv_imp.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
